# MLOps-24

./: LICENSE  Makefile  README.md  final_report.md  improve_model.py  pyproject.toml  requirements.txt  run_pipeline copy.py  run_pipeline.py
configs/: german_credit_config.json  marketing_campaign_config.json
docs/: mkdocs.yml
docs/docs/: index.md
models/: german_credit_improved_pipeline.pkl  german_credit_pipeline.pkl  marketing_campaign_improved_pipeline.pkl  marketing_campaign_pipeline.pkl
src/: pipeline_manager.py
src/data/: data_loader_preprocessor.py
src/evaluation/: evaluation.py
src/methods/: explainability.py  feature_performance_weaknesses.py  uncertainty.py  utils.py
src/visualization/: visualize.py
